# script-languages-package-management

./: .gitignore  README.md  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.github/workflows/: build-and-publish.yml  build-executable.yml  build_docker_images.yml  cd.yml  checks.yml  ci.yml  gh-pages.yml  matrix-build-executable-config.yml  matrix-docker-image-config.yml  matrix-int-test-config.yml  matrix-python-platform.yml  matrix-python-runner.yml  matrix-runner.yml  merge-gate.yml  slow-checks.yml
doc/: api.rst  conf.py  index.rst  specification.rst
doc/changes/: changelog.md  changes_1.0.0.md  changes_1.1.0.md  changes_1.2.0.md  unreleased.md
doc/developer_guide/: developer_guide.rst
doc/user_guide/: user_guide.rst
exasol/exaslpm/: main.py  version.py
exasol/exaslpm/cli/: __init__.py  cli.py  export_variables.py  install.py  list_all_installed_packages.py  make_context.py
exasol/exaslpm/model/: any_package.py  package_edit.py  package_file_config.py  package_file_config_find.py  package_file_config_validation.py  package_validation_error.py  serialization.py
exasol/exaslpm/pkg_mgmt/: binary_checker.py  binary_finder.py  binary_types.py  cmd_executor.py  cmd_logger.py  constants.py  export_variables.py  find_in_buildsteps.py  history_file_manager.py  install_apt.py  install_apt_packages.py  install_apt_ppa.py  install_apt_repos.py  install_bazel.py  install_common.py  install_conda.py  install_conda_packages.py  install_micromamba.py  install_packages.py  install_pip.py  install_pip_packages.py  install_r.py  install_r_packages.py  install_utils.py  list_all_installed_packages.py  micromamba_env.py  package_collectors.py  package_file_session.py  pkg_navigation.py
exasol/script_languages_package_management/apt/: install.py
exasol/script_languages_package_management/cli/: cli.py  main.py
exasol/script_languages_package_management/conda/: install.py
exasol/script_languages_package_management/pip/: install.py
exasol/script_languages_package_management/r/: install.py
test/integration/: cli_helper.py  conftest.py  docker_test_environment_builder.py  export_variables_common.py  integration_smoke_test.py  package_file.py  package_fixtures.py  package_utils.py  simple_test.py  test_apt_install_via_binary.py  test_apt_install_via_command_executor.py  test_command_executor.py  test_export_variables_via_binary.py  test_export_variables_via_command_executor.py  test_install_apt_packages_via_binary.py  test_install_apt_packages_via_command_executor.py  test_install_bazel_via_binary.py  test_install_bazel_via_command_executor.py  test_install_conda_packages_via_binary.py  test_install_conda_packages_via_command_executor.py  test_install_micromamba_via_binary.py  test_install_micromamba_via_command_executor.py  test_install_pip_packages_via_binary.py  test_install_pip_packages_via_command_executor.py  test_install_pip_via_binary.py  test_install_pip_via_command_executor.py  test_install_ppa_packages_with_binary.py  test_install_ppa_via_command_executor.py  test_install_r_packages_via_binary.py  test_install_r_packages_via_command_executor.py  test_madison_executor.py  test_madison_int_exe.py  validate_bazel.py
test/integration/docker_test_environment/: docker_binary_checker.py  docker_command_executor.py  docker_file_access.py  docker_file_downloader.py  docker_temp_file_provider.py  docker_test_container.py  docker_test_image.py  docker_test_image_builder.py  exaslcpm_info.py  exaslpm_info.py  test_logger.py
test/resources/: package_file_01.yaml
test/unit/: test_data.py  test_package_file_session.py  unit_smoke_test.py
test/unit/cli/: cli_runner.py  conftest.py  test_apt_install.py  test_conda_install.py  test_export_variables.py  test_install.py  test_pip_install.py  test_r.py  test_r_install.py
test/unit/model/: build_test_matrix.py  test_any_package.py  test_model.py  test_model_navigation.py  test_model_validation.py  test_package_edit.py  test_package_file_config_find.py  test_serialization.py
(+65 files in other folders)
